--- a/HW9_cjs676/README.ME
+++ b/HW9_cjs676/README.ME
@@ -1,2 +1,108 @@
 I worked alone. I was not able to finish the project because I had a problem with my Green environment. THe email chain is below. 
 THat being said I do not think I have time to work on this assignment tomorrow or Firday. I also have used my extension.
+
+
+
+
+
+When I try to get onto the compute (Green environment, I think) I get this error:
+
+#####################################################################
+
+#                 Welcome to NYU CUSP gateway server                #  
+
+#             All connections are monitored and recorded            #
+
+#        Disconnect IMMEDIATELY if you are not an authorized user!  #
+
+#                                                                   #
+
+#                  WARNING------WARNING------WARNING                #
+
+# PLEASE DO NOT  UPLOAD OR CREATE ANY FILE IN YOUR LOCAL DIRECTORY  #
+
+# ON THIS SERVER (gateway server), ALL FILES OR FOLDERS ARE DELETED #
+
+# WITHOUT WARNING.                                                  #  
+
+#                                                                   # 
+
+# The gateway server is only used as a secure door to CUSP Data     #
+
+#            Facility and computing environment                     # 
+
+#  Please go to http://datahub.cusp.nyu.edu to learn more about     # 
+
+#  data transfer (upload/download)  to/from your CUSP home directory#          
+
+#                  THANK YOU FOR YOUR COOPERATON                    # 
+
+#                      CUSP FACILITY TEAM                           #
+
+#####################################################################
+
+cjs676@gw.cusp.nyu.edu's password: 
+
+Last login: Tue Nov 15 22:23:46 2016 from 96.250.207.34
+
+[cjs676@gw1 ~]$ ssh compute
+
+Last login: Tue Nov 15 22:23:54 2016 from 192.168.72.191
+
+-bash: fork: retry: Resource temporarily unavailable
+
+-bash: fork: retry: Resource temporarily unavailable
+
+-bash: fork: retry: Resource temporarily unavailable
+
+-bash: fork: retry: Resource temporarily unavailable
+
+-bash: fork: Resource temporarily unavailable
+
+-bash-4.1$ 
+
+
+
+
+
+
+
+The error occurs after I successfully type in my password. Once I type in my password I try to run the command <ssh compute> and that is where the error occurs.  This error began yesterday around 11:00am. 
+
+
+
+
+
+
+CUSP IT
+10:24 AM (10 hours ago)
+
+to me 
+Dear Christopher Streich,
+You have a python run process that consumed all forks allowed for your users , please verify your code.
+You should able to login now.
+
+CUSP IT
+
+Foued Aouchette
+--
+Center for Urban Science and Progress
+New York University
+1 MetroTech Ctr, 19th Fl
+Brooklyn, NY 11201
+Email: cusp.it@nyu.edu
+Web: http://cusp.nyu.edu/
+--
+
+
+Christopher J Streich <cjs676@nyu.edu>
+10:29 AM (10 hours ago)
+
+to CUSP 
+Foued,
+
+Works great now.  Issue resolved.  Thanks for your help. 
+
+
+Christopher Streich
+cjs676
